--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "sakai-ng",
-    "version": "17.0.0",
-    "license": "PrimeNG Commercial",
+    "name": "casajulianapp",
+    "version": "1.0.0",
+    "license": "MIT",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
